--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -1,10 +1,6 @@
-.section__about{
+.section__about {
   flex-direction: column;
 }
-.about-container {
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  align-items: center;
+.container-special > * {
+  width: max(35%, 20rem);
 }
-
